# AccountabilityBotty

./: .gitignore  Cargo.toml  Dockerfile  README.md
configuration/: base.yaml.example  production.yaml.example
scripts/: init_db.sh
src/: configuration.rs  handler.rs  lib.rs  main.rs  startup.rs
src/database/: challenge.rs
src/msgs/: help.rs  mod.rs  ping.rs  register_challenge.rs
src/utils/: constants.rs  errors.rs  helpers.rs  mod.rs
tests/client/: helpers.rs
