[package]
name = "AccountabilityBotty"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "AccountabilityBotty"

[dependencies]
actix-web = "4.1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.13.1"
chrono = "0.4.19"
uuid = { version = "1.1.2", features = ["v4"] }
serde = { version = "1.0.144", features = ["derive"] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
once_cell = "1.14.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.6.0"
serde-aux = "3.1.0"
unicode-segmentation = "1.9.0"
claim = "0.5.0"
validator = "0.16.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1.0.34"
anyhow = "1.0.64"
base64 = "0.13.0"
sha3 = "0.10.4"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
    version = "0.6"
    default-features = false
    features = [
        "runtime-actix-rustls",
        "macros",
        "postgres",
        "uuid",
        "chrono",
        "migrate",
        "offline"
    ]

[dev-dependencies]
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"
